--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ jQuery, Durandal, Bootstrap, Express, Linux, Git</p>
                   <p class="mb-0">Amazon Reviews Sentiment Analysis evaluates customer feedback as positive or negative.</p>
                 </span>
               </span>
-              <img class="img-fluid portfolio-img" src="img/amazon_review.png" alt="">
+              <img class="img-fluid portfolio-img" src="img/amazon_review.webp" alt="">
             </a>
           </div>
           <div class="col-lg-4">
