--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ jQuery, Durandal, Bootstrap, Express, Linux, Git</p>
           </div>
           <div class="col-lg-4 col-md-6 mb-5">
             <span class="service-icon rounded-circle mx-auto mb-3 text-secondary">
-              <i class="fa icon-python fa-2x" style="padding-top:24px; padding-left:12px"></i>
+              <i class="fa-brands fa-python fa-2x" style="padding-top:24px; padding-left:12px"></i>
             </span>
             <h4>
               <b>Python</b>
@@ -212,7 +212,7 @@ jQuery, Durandal, Bootstrap, Express, Linux, Git</p>
             </div>
           <div class="col-lg-4 col-md-6 mb-5">
             <span class="service-icon rounded-circle mx-auto mb-3 text-secondary">
-              <i class="fa icon-java-bold fa-2x" style="padding-top:20px; padding-left:25px"></i>
+              <i class="fa-brands fa-java fa-2x" style="padding-top:20px; padding-left:25px"></i>
             </span>
             <h4>
               <b>Java</b>
@@ -237,7 +237,7 @@ jQuery, Durandal, Bootstrap, Express, Linux, Git</p>
           
           <div class="col-lg-4 col-md-6 mb-0">
             <span class="service-icon rounded-circle mx-auto mb-3 text-secondary">
-              <i class="fa icon-mongodb fa-2x" style="padding-top:18px"></i>
+              <i class="fa-solid fa-database fa-2x" style="padding-top:18px"></i>
             </span>
             <h4>
               <b>MongoDB</b>
