--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ jQuery, Durandal, Bootstrap, Express, Linux, Git</p>
           </div>
           <div class="col-lg-4 col-md-6 mb-5">
             <span class="service-icon rounded-circle mx-auto mb-3 text-secondary">
-              <i class="fa-brands fa-python fa-2x" style="padding-top:24px; padding-left:12px"></i>
+              <i class="fa icon-python fa-2x" style="padding-top:24px; padding-left:12px"></i>
             </span>
             <h4>
               <b>Python</b>
