--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ jQuery, Durandal, Bootstrap, Express, Linux, Git</p>
             </div>
           <div class="col-lg-4 col-md-6 mb-5">
             <span class="service-icon rounded-circle mx-auto mb-3 text-secondary">
-              <i class="fa-brands fa-java fa-2x" style="padding-top:20px; padding-left:25px"></i>
+              <i class="fa icon-java-bold fa-2x" style="padding-top:20px; padding-left:25px"></i>
             </span>
             <h4>
               <b>Java</b>
@@ -227,7 +227,7 @@ jQuery, Durandal, Bootstrap, Express, Linux, Git</p>
             </h4>
           </div>
           <div class="col-lg-4 col-md-6 mb-5">
-            <span class="service-icon rounded-circle mx-auto mb-3 text-secondary">
+           <span class="service-icon rounded-circle mx-auto mb-3 text-secondary">
               <i class="fa icon-cplusplus fa-2x" style="padding-top:26px"></i>
             </span>
             <h4>
@@ -237,7 +237,7 @@ jQuery, Durandal, Bootstrap, Express, Linux, Git</p>
           
           <div class="col-lg-4 col-md-6 mb-0">
             <span class="service-icon rounded-circle mx-auto mb-3 text-secondary">
-              <i class="fa-solid fa-database fa-2x" style="padding-top:18px"></i>
+              <i class="fa icon-mongodb fa-2x" style="padding-top:18px"></i>
             </span>
             <h4>
               <b>MongoDB</b>
